--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "recharts": "^3.6.0",
     "@google/genai": "^1.35.0",
     "react": "^19.2.3",
-    "marked": "^17.0.1"
+    "marked": "^17.0.1",
+    "katex": "0.16.9",
+    "papaparse": "5.4.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
