--- a/qb-forecast-ai/package.json
+++ b/qb-forecast-ai/package.json
@@ -22,10 +22,9 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/papaparse": "^5.3.14",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0",
-    "vite-plugin-pwa": "^0.21.1",
-    "workbox-window": "^7.3.0"
+    "vite": "^6.2.0"
   }
 }
